// Copyright 2018 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/backend/api/v2beta1/go_client";
package kubeflow.pipelines.backend.api.v2beta1;

import "google/protobuf/struct.proto";

// The runtime config.
message RuntimeConfig {
  // The runtime parameters of the Pipeline. The parameters will be
  // used to replace the placeholders at runtime.
  map<string, google.protobuf.Value> parameters = 1;

  // A path in a object store bucket which will be treated as the root
  // output directory of the pipeline. It is used by the system to
  // generate the paths of output artifacts. 
  // Ref:(https://www.kubeflow.org/docs/components/pipelines/pipeline-root/)
  string pipeline_root = 2;
}
